--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule ".vim/plugged/nerdtree-git-plugin"]
 	path = .vim/plugged/nerdtree-git-plugin
 	url = https://github.com/Xuyuanp/nerdtree-git-plugin.git
+[submodule ".vim/plugged/gitv"]
+	path = .vim/plugged/gitv
+	url = https://github.com/gregsexton/gitv.git
