--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule ".vim/plugged/gitv"]
 	path = .vim/plugged/gitv
 	url = https://github.com/gregsexton/gitv.git
+[submodule ".vim/plugged/tagbar"]
+	path = .vim/plugged/tagbar
+	url = https://github.com/majutsushi/tagbar
+[submodule ".vim/plugged/vim-indent-guides"]
+	path = .vim/plugged/vim-indent-guides
+	url = https://github.com/nathanaelkane/vim-indent-guides
