Upgrade plugins and fix submodle config
gv (72dc64d -> 5f902f4)
lightline (c172131 -> d5cea5b)
nerdtree (6.7.11 -> 6.10.9)
nerdtree-git (f522a09 -> 4524fb4)
tagbar (2.7 -> 3.0.0)
vim-fugitive (v3.2 -> v3.3)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule ".vim/plugged/gv.vim"]
+	path = .vim/plugged/gv.vim
+	url = https://github.com/junegunn/gv.vim.git
 [submodule ".vim/plugged/lightline.vim"]
 	path = .vim/plugged/lightline.vim
 	url = https://github.com/itchyny/lightline.vim.git
@@ -19,3 +22,6 @@
 [submodule ".vim/plugged/vim-indent-guides"]
 	path = .vim/plugged/vim-indent-guides
 	url = https://github.com/nathanaelkane/vim-indent-guides
+[submodule ".vim/plugged/vim-tldr"]
+	path = .vim/plugged/vim-tldr
+	url = https://github.com/wlemuel/vim-tldr.git
